--- a/src/common.props
+++ b/src/common.props
@@ -2,8 +2,11 @@
   <PropertyGroup>
     <Copyright>Copyright © 2015-2019 Petabridge, LLC</Copyright>
     <Authors>Petabridge</Authors>
-    <VersionPrefix>0.9.2</VersionPrefix>
-    <PackageReleaseNotes>Upgraded to Akka.NET 1.3.7.</PackageReleaseNotes>
+    <VersionPrefix>0.1.0</VersionPrefix>
+    <PackageReleaseNotes>Upgraded to Akka.NET v1.3.13
+Installed [Akka.Bootstrap.Docker](https://github.com/petabridge/akkadotnet-bootstrap)
+Added separately tagged [Windows and Linux Lighthouse Docker images to `petabridge/lighthouse` on DockerHub](https://hub.docker.com/r/petabridge/lighthouse).
+Upgraded to .NET 4.6.1 and .NET Core 2.1, respectively.</PackageReleaseNotes>
     <PackageIconUrl>https://petabridge.com/images/logo.png</PackageIconUrl>
     <PackageProjectUrl>
       https://github.com/petabridge/lighthouse
