--- a/src/Lighthouse/Dockerfile-windows
+++ b/src/Lighthouse/Dockerfile-windows
@@ -6,8 +6,6 @@ ENV CLUSTER_SEEDS "[]"
 ENV CLUSTER_IP ""
 ENV CLUSTER_PORT "4053"
 
-COPY ./bin/Release/netcoreapp2.1/publish/ /app
-
 # 9110 - Petabridge.Cmd
 # 4053 - Akka.Cluster
 EXPOSE 9110 4053
@@ -20,5 +18,15 @@ EXPOSE 9110 4053
 #ENV PATH="${PATH}:/root/.dotnet/tools"
 
 # RUN pbm help
+
+COPY ./bin/Release/netcoreapp2.1/publish/ /app
+
+FROM mcr.microsoft.com/dotnet/core/runtime:2.1-nanoserver-1803 AS app
+WORKDIR /app
+
+COPY --from=base /app /app
+
+# copy .NET Core global tool
+# COPY --from=base /root/.dotnet /root/.dotnet/
 
 CMD ["dotnet", "Lighthouse.dll"]
