--- a/src/common.props
+++ b/src/common.props
@@ -2,11 +2,9 @@
   <PropertyGroup>
     <Copyright>Copyright © 2015-2019 Petabridge, LLC</Copyright>
     <Authors>Petabridge</Authors>
-    <VersionPrefix>1.0.0</VersionPrefix>
-    <PackageReleaseNotes>Upgraded to Akka.NET v1.3.13
-Installed [Akka.Bootstrap.Docker](https://github.com/petabridge/akkadotnet-bootstrap)
-Added separately tagged [Windows and Linux Lighthouse Docker images to `petabridge/lighthouse` on DockerHub](https://hub.docker.com/r/petabridge/lighthouse).
-Upgraded to .NET 4.6.1 and .NET Core 2.1, respectively.</PackageReleaseNotes>
+    <VersionPrefix>1.1.0</VersionPrefix>
+    <PackageReleaseNotes>Reduced [Docker image size by a factor of 10](https://github.com/petabridge/lighthouse/pull/84).
+Upgraded to [Petabridge.Cmd v0.6.2](https://cmd.petabridge.com/articles/RELEASE_NOTES.html#the-highlights-of-changes-made-in-petabridgecmd-v060-2)</PackageReleaseNotes>
     <PackageIconUrl>https://petabridge.com/images/logo.png</PackageIconUrl>
     <PackageProjectUrl>
       https://github.com/petabridge/lighthouse
