--- a/build-system/windows-pr-validation.yaml
+++ b/build-system/windows-pr-validation.yaml
@@ -17,6 +17,6 @@ jobs:
 - template: azure-pipeline.template.yaml
   parameters:
     name: Windows
-    vmImage: 'windows-2019'
+    vmImage: 'win1803'
     scriptFileName: build.cmd
     scriptArgs: all
