--- a/build-system/windows-pr-validation.yaml
+++ b/build-system/windows-pr-validation.yaml
@@ -17,6 +17,12 @@ jobs:
 - template: azure-pipeline.template.yaml
   parameters:
     name: Windows
-    vmImage: 'win1803'
+    vmImage: 'windows-2019'
     scriptFileName: build.cmd
     scriptArgs: all
+- template: azure-pipeline.template.yaml
+  parameters:
+    name: WindowsRuntimesTests
+    vmImage: 'win1803'
+    scriptFileName: build.cmd
+    scriptArgs: RunTestsOnRuntimes
