--- a/src/common.props
+++ b/src/common.props
@@ -2,10 +2,8 @@
   <PropertyGroup>
     <Copyright>Copyright © 2015-2019 Petabridge, LLC</Copyright>
     <Authors>Petabridge</Authors>
-    <VersionPrefix>1.3.0</VersionPrefix>
-    <PackageReleaseNotes>[Enable SSL needs management](https://github.com/petabridge/lighthouse/issues/102)
-Updated all underlying dependencies.
-Updated Windows Server base Docker image.</PackageReleaseNotes>
+    <VersionPrefix>1.3.1</VersionPrefix>
+    <PackageReleaseNotes>Updated to use Akka.NET v1.4.1.</PackageReleaseNotes>
     <PackageIconUrl>https://petabridge.com/images/logo.png</PackageIconUrl>
     <PackageProjectUrl>
       https://github.com/petabridge/lighthouse
@@ -23,7 +21,7 @@ Updated Windows Server base Docker image.</PackageReleaseNotes>
     <NetStandardVersion>netstandard1.6</NetStandardVersion>
     <NetFrameworkLibVersion>net461</NetFrameworkLibVersion>
     <NetFrameworkTestVersion>net461</NetFrameworkTestVersion>
-    <AkkaVersion>1.3.17</AkkaVersion>
+    <AkkaVersion>1.4.1</AkkaVersion>
     <PbmVersion>0.7.1</PbmVersion>
   </PropertyGroup>
 </Project>
