--- a/src/Lighthouse/Dockerfile-windows
+++ b/src/Lighthouse/Dockerfile-windows
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:2.1-nanoserver-1803 AS base
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS base
 WORKDIR /app
 
 # Install Petabridge.Cmd client so it can be invoked remotely via
@@ -12,7 +12,7 @@ WORKDIR /app
 
 COPY ./bin/Release/netcoreapp2.1/publish/ /app
 
-FROM mcr.microsoft.com/dotnet/core/runtime:2.1-nanoserver-1803 AS app
+FROM mcr.microsoft.com/dotnet/core/runtime:3.1 AS app
 WORKDIR /app
 
 COPY --from=base /app /app
