--- a/src/Lighthouse/Dockerfile-windows
+++ b/src/Lighthouse/Dockerfile-windows
@@ -25,6 +25,7 @@ ENV CLUSTER_SEEDS "[]"
 ENV CLUSTER_IP ""
 ENV CLUSTER_PORT "4053"
 ENV AKKA__CLUSTER__SPLIT_BRAIN_RESOLVER__ACTIVE_STRATEGY "keep-majority"
+ENV AKKA__REMOTE__DOT-NETTY__TCP__BATCHING__ENABLED "false"
 
 # 9110 - Petabridge.Cmd
 # 4053 - Akka.Cluster
