Update docker base image (#143)
* Update docker base image from dotnet core 2.1 to dotnet core 3.1 (support for win1803 dropped)

* set `akka.remote.dot-netty.tcp.batching.enabled to false

* runtime needs to stay at .net core 2.1

* downgrade docker image version to match azure pipeline version

Co-authored-by: Aaron Stannard <aaron@petabridge.com>

--- a/src/Lighthouse/Dockerfile-linux
+++ b/src/Lighthouse/Dockerfile-linux
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:2.1 AS base
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS base
 WORKDIR /app
 
 # Install Petabridge.Cmd client so it can be invoked remotely via
@@ -25,6 +25,7 @@ ENV CLUSTER_SEEDS "[]"
 ENV CLUSTER_IP ""
 ENV CLUSTER_PORT "4053"
 ENV AKKA__CLUSTER__SPLIT_BRAIN_RESOLVER__ACTIVE_STRATEGY "keep-majority"
+ENV AKKA__REMOTE__DOT-NETTY__TCP__BATCHING__ENABLED "false"
 
 # 9110 - Petabridge.Cmd
 # 4053 - Akka.Cluster
