--- a/src/common.props
+++ b/src/common.props
@@ -2,10 +2,9 @@
   <PropertyGroup>
     <Copyright>Copyright © 2015-2019 Petabridge, LLC</Copyright>
     <Authors>Petabridge</Authors>
-    <VersionPrefix>1.3.2</VersionPrefix>
-    <PackageReleaseNotes>Updated to use Akka.NET v1.4.5.
-Updated Docker .NET Core runtime base image from nanoserver-1803 to nanoserver-1809, 1803 are deprecated.
-Followed [Akka.Remote performance best practices](https://getakka.net/articles/remoting/performance.html) and disabled batching for Lighthouse in order to reduce CPU utilization by default.</PackageReleaseNotes>
+    <VersionPrefix>1.4.0</VersionPrefix>
+    <PackageReleaseNotes>Updated to use Akka.NET v1.4.8.
+Should resolve high idle CPU utilization issues detected in earlier versions of Lighthouse.</PackageReleaseNotes>
     <PackageIconUrl>https://petabridge.com/images/logo.png</PackageIconUrl>
     <PackageProjectUrl>
       https://github.com/petabridge/lighthouse
