WIP ARM64 image support
close #269

--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -87,7 +87,7 @@ jobs:
 
   - job:  windowsImageDeploy
     pool:
-      vmImage: windows-2019
+      vmImage: windows-latest
     dependsOn: publishNetCore
     steps:
       - task: DownloadBuildArtifacts@0
