added Linux integration testing

--- a/build-system/linux-pr-validation.yaml
+++ b/build-system/linux-pr-validation.yaml
@@ -17,6 +17,12 @@ jobs:
 - template: azure-pipeline.template.yaml
   parameters:
     name: Ubuntu
-    vmImage: 'ubuntu-20.04'
+    vmImage: 'ubuntu-latest'
     scriptFileName: ./build.sh
     scriptArgs: all
+- template: azure-pipeline.template.yaml
+  parameters:
+    name: LinuxRuntimesTests
+    vmImage: 'ubuntu-latest'
+    scriptFileName: ./build.sh
+    scriptArgs: RunTestsOnRuntimes
