--- a/build-system/azure-pipeline.template.yaml
+++ b/build-system/azure-pipeline.template.yaml
@@ -16,6 +16,14 @@ jobs:
         clean: false  # whether to fetch clean each time
         submodules: recursive  # set to 'true' for a single level of submodules or 'recursive' to get submodules of submodules
         persistCredentials: true
+      - task: UseDotNet@2
+        displayName: 'Use .NET 6 SDK 6.0.100'
+        inputs:
+          version: 6.0.100
+      - task: UseDotNet@2
+        displayName: "Use .NET Core SDK 3.1.415"
+        inputs:
+          version: 3.1.415
       # Linux or macOS
       - task: Bash@3 
         displayName: Linux / OSX Build
