--- a/src/Lighthouse/Dockerfile-arm64
+++ b/src/Lighthouse/Dockerfile-arm64
@@ -3,7 +3,7 @@ WORKDIR /app
 
 # Install Petabridge.Cmd client so it can be invoked remotely via
 # Docker or K8s 'exec` commands
-RUN dotnet tool install --global pbm 
+#RUN dotnet tool install --global pbm 
 
 # RUN pbm help
 
@@ -15,10 +15,10 @@ WORKDIR /app
 COPY --from=base /app /app
 
 # copy .NET Core global tool
-COPY --from=base /root/.dotnet /root/.dotnet/
+#COPY --from=base /root/.dotnet /root/.dotnet/
 
 # Needed because https://stackoverflow.com/questions/51977474/install-dotnet-core-tool-dockerfile
-ENV PATH="${PATH}:/root/.dotnet/tools"
+#ENV PATH="${PATH}:/root/.dotnet/tools"
 
 # should be a comma-delimited list
 ENV CLUSTER_SEEDS "[]"
