--- a/build-system/azure-pipeline.template.yaml
+++ b/build-system/azure-pipeline.template.yaml
@@ -24,6 +24,11 @@ jobs:
         displayName: "Use .NET Core SDK 3.1.415"
         inputs:
           version: 3.1.415
+      - task: DockerInstaller@0
+        displayName: Docker Installer
+        inputs:
+          dockerVersion: 20.10.14
+          releaseType: stable
       # Linux or macOS
       - task: Bash@3 
         displayName: Linux / OSX Build
