try 3.1 base image

--- a/src/Lighthouse/Dockerfile-arm64
+++ b/src/Lighthouse/Dockerfile-arm64
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-focal-arm64v8 AS base
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS base
 WORKDIR /app
 
 # Install Petabridge.Cmd client so it can be invoked remotely via
@@ -9,7 +9,7 @@ RUN dotnet tool install --global pbm
 
 COPY ./bin/Release/netcoreapp3.1/publish/ /app
 
-FROM mcr.microsoft.com/dotnet/core/runtime:3.1-focal-arm64v8 AS app
+FROM mcr.microsoft.com/dotnet/core/runtime:3.1 AS app
 WORKDIR /app
 
 COPY --from=base /app /app
