Revert "testing .NET 6 images"
This reverts commit 4abd0751244f4053b0a13fe9e75f3cbfe3c8a6f1.

--- a/src/Lighthouse/Dockerfile-arm64
+++ b/src/Lighthouse/Dockerfile-arm64
@@ -1,15 +1,15 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0-focal AS base
+FROM mcr.microsoft.com/dotnet/sdk:3.1 AS base
 WORKDIR /app
 
 # Install Petabridge.Cmd client so it can be invoked remotely via
 # Docker or K8s 'exec` commands
-RUN dotnet tool install -a arm64 --global pbm 
+RUN dotnet tool install --global pbm 
 
 # RUN pbm help
 
 COPY ./bin/Release/netcoreapp3.1/publish/ /app
 
-FROM mcr.microsoft.com/dotnet/runtime:6.0-focal AS app
+FROM mcr.microsoft.com/dotnet/runtime:3.1 AS app
 WORKDIR /app
 
 COPY --from=base /app /app
