--- a/build-system/azure-pipeline.template.yaml
+++ b/build-system/azure-pipeline.template.yaml
@@ -9,8 +9,6 @@ parameters:
 jobs:
   - job: ${{ parameters.name }}
     timeoutInMinutes: ${{ parameters.timeoutInMinutes }}
-    variables:
-      DOCKER_BUILDKIT: 1
     pool:
       vmImage: ${{ parameters.vmImage }}
     steps:
@@ -26,12 +24,11 @@ jobs:
         displayName: "Use .NET Core SDK 3.1.415"
         inputs:
           version: 3.1.415
-      - task: DockerInstaller@0
-        displayName: Docker Installer
-        inputs:
-          dockerVersion: 20.10.14
-          releaseType: stable
       # Linux or macOS
+      - task: Bash@3
+        displayName: Docker - Register QEMU
+        inputs:
+          inline: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
       - task: Bash@3 
         displayName: Linux / OSX Build
         inputs:
