ARM64 image support (#274)
* WIP ARM64 image support

close #269

* added `build.fsx` support

* added ARM64 integration testing

* added Linux integration testing

* fixing integration testing FAKE

* fixing up `docker build` instructions

* added more detailed logging

* have `docker build` working again

* fixed Docker images and ARM build

* fixed Windows image name

* allow cluster to actually form

* fixed Azure Pipelines template

* added fail gate back

* added Windows runtime tests back

* fixed powershell invocation

* update ARM64 file to use `dotnet tool install -g -a arm64`

* target Ubuntu 20.04

* removed `-a arm64` param

* fixed formatting

* ensure .NET Core 3.1 SDK is installed

* skip installing .NET from CLI

* disable PBM install on ARM64

* add a DockerInstall stage to AzDo

* added `dotnet` commands back to ARM image

* disable caching on `docker build`

* try 3.1 base image

* changed base image URIs

* testing .NET 6 images

* Revert "testing .NET 6 images"

This reverts commit 4abd0751244f4053b0a13fe9e75f3cbfe3c8a6f1.

* enable Docker BuiltKit

* removed Docker install, BuildKit, but added QEMU

* clean up QEMU

--- a/build-system/azure-pipeline.template.yaml
+++ b/build-system/azure-pipeline.template.yaml
@@ -16,7 +16,19 @@ jobs:
         clean: false  # whether to fetch clean each time
         submodules: recursive  # set to 'true' for a single level of submodules or 'recursive' to get submodules of submodules
         persistCredentials: true
+      - task: UseDotNet@2
+        displayName: 'Use .NET 6 SDK 6.0.100'
+        inputs:
+          version: 6.0.100
+      - task: UseDotNet@2
+        displayName: "Use .NET Core SDK 3.1.415"
+        inputs:
+          version: 3.1.415
       # Linux or macOS
+      - script: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+        displayName: Docker - Register QEMU
+        continueOnError: true
+        condition: in( variables['Agent.OS'], 'Linux', 'Darwin' )
       - task: Bash@3 
         displayName: Linux / OSX Build
         inputs:
@@ -38,22 +50,6 @@ jobs:
           testResultsFiles: '**/*.trx' #TestResults folder usually
           testRunTitle: ${{ parameters.name }}
           mergeTestResults: true
-      #Docker build 
-      # Build on Linux
-      - task: Bash@3 
-        displayName: Docker Build (Linux)
-        inputs:
-          filePath: ${{ parameters.scriptFileName }}
-          arguments: ${{ parameters.dockerBuildArgs }}
-        continueOnError: false
-        condition: in( variables['Agent.OS'], 'Linux', 'Darwin' )
-      - task: BatchScript@1
-        displayName: Docker Build (Windows)
-        inputs:
-          filename: ${{ parameters.scriptFileName }}
-          arguments: ${{ parameters.dockerBuildArgs }}
-        continueOnError: true
-        condition: eq( variables['Agent.OS'], 'Windows_NT' )
       - script: 'echo 1>&2'
         failOnStderr: true
         displayName: 'If above is partially succeeded, then fail'
