--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -63,27 +63,32 @@ jobs:
           artifactName: 'drop'
           itemPattern: drop/**
           downloadPath: '$(Agent.BuildDirectory)'
+
+        # needed for ARM builds
+      - script: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+        displayName: Docker - Register QEMU
+        continueOnError: true
+        condition: in( variables['Agent.OS'], 'Linux', 'Darwin' )
       - task: Docker@2
         displayName: "Login to Docker Hub"
         inputs:
           command: login
           containerRegistry: $(dockerConnectionName)
-      - task: Docker@2
-        displayName: Docker Build (Linux)
-        inputs:
-          command: buildAndPush
-          Dockerfile: $(Agent.BuildDirectory)/drop/Dockerfile-linux
-          repository: petabridge/lighthouse
-          tags: |
-            latest
-            linux-latest
-            $(Build.SourceBranchName)
-            $(Build.SourceBranchName)-linux
+      - script: docker buildx create --name akka-arch --use
+        displayName: Create Docker buildx Builder
+        continueOnError: true
+      - script: docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 --no-cache -f Dockerfile-linux -t petabridge/lighthouse:latest -t petabridge/lighthouse:linux-latest -t petabridge/lighthouse:$(Build.SourceBranchName) -t petabridge/lighthouse:$(Build.SourceBranchName)-linux --push .
+        displayName: Docker Build and Push (multiarch)
+        continueOnError: true
       - task: Docker@2
         displayName: Logout of Docker Hub
         inputs:
           command: logout
           containerRegistry: $(dockerConnectionName)
+      - script: 'echo 1>&2'
+        failOnStderr: true
+        displayName: 'If above is partially succeeded, then fail'
+        condition: eq(variables['Agent.JobStatus'], 'SucceededWithIssues')
 
   - job:  windowsImageDeploy
     pool:
