upgrade to .NET 6

--- a/src/Lighthouse/Dockerfile-linux
+++ b/src/Lighthouse/Dockerfile-linux
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS base
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS base
 WORKDIR /app
 
 # Install Petabridge.Cmd client so it can be invoked remotely via
@@ -7,9 +7,9 @@ RUN dotnet tool install --global pbm
 
 # RUN pbm help
 
-COPY ./bin/Release/netcoreapp3.1/publish/ /app
+COPY ./bin/Release/net6.0/publish/ /app
 
-FROM mcr.microsoft.com/dotnet/core/runtime:3.1 AS app
+FROM mcr.microsoft.com/dotnet/runtime:6.0 AS app
 WORKDIR /app
 
 COPY --from=base /app /app
