--- a/src/Lighthouse/Dockerfile-windows
+++ b/src/Lighthouse/Dockerfile-windows
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-nanoserver-1809 AS base
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS base
 WORKDIR /app
 
 # Install Petabridge.Cmd client so it can be invoked remotely via
@@ -10,9 +10,9 @@ WORKDIR /app
 
 # RUN pbm help
 
-COPY ./bin/Release/netcoreapp3.1/publish/ /app
+COPY ./bin/Release/net6.0/publish/ /app
 
-FROM mcr.microsoft.com/dotnet/core/runtime:3.1-nanoserver-1809 AS app
+FROM mcr.microsoft.com/dotnet/runtime:6.0 AS app
 WORKDIR /app
 
 COPY --from=base /app /app
