--- a/src/common.props
+++ b/src/common.props
@@ -18,10 +18,10 @@
     <XunitVersion>2.4.2</XunitVersion>
     <MicrosoftSdkVersion>17.3.0</MicrosoftSdkVersion>
     <FluentAssertionsVersion>6.7.0</FluentAssertionsVersion>
-    <NetCoreVersion>netcoreapp3.1</NetCoreVersion>
+    <NetCoreVersion>net6.0</NetCoreVersion>
     <NetStandardVersion>netstandard1.6</NetStandardVersion>
     <NetFrameworkLibVersion>net461</NetFrameworkLibVersion>
-    <NetFrameworkTestVersion>netcoreapp3.1</NetFrameworkTestVersion>
+    <NetFrameworkTestVersion>net6.0</NetFrameworkTestVersion>
     <AkkaVersion>1.4.40</AkkaVersion>
     <PbmVersion>1.1.0</PbmVersion>
   </PropertyGroup>
