--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -18,7 +18,7 @@ variables:
 jobs:
   - job: publishNetCore
     pool:
-      vmImage: windows-2019
+      vmImage: windows-latest
       demands: Cmd
     steps:
     - task: BatchScript@1
@@ -29,8 +29,8 @@ jobs:
     - task: CopyFiles@2
       displayName: 'Copy dotnet publish Output'
       inputs:
-        sourceFolder: src/Lighthouse/bin/Release/netcoreapp3.1/publish/
-        targetFolder: $(Build.ArtifactStagingDirectory)/bin/Release/netcoreapp3.1/publish/
+        sourceFolder: src/Lighthouse/bin/Release/net6.0/publish/
+        targetFolder: $(Build.ArtifactStagingDirectory)/bin/Release/net6.0/publish/
     - task: CopyFiles@2
       displayName: 'Copy Dockerfiles'
       inputs:
