added explicit .NET 6 SDK install

--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -21,6 +21,10 @@ jobs:
       vmImage: windows-latest
       demands: Cmd
     steps:
+    - task: UseDotNet@2
+      displayName: 'Use .NET 6 SDK 6.0.100'
+      inputs:
+        version: 6.0.100
     - task: BatchScript@1
       displayName: 'dotnet publish'
       inputs:
