--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -81,7 +81,7 @@ jobs:
       - script: docker buildx create --name akka-arch --use
         displayName: Create Docker buildx Builder
         continueOnError: true
-      - script: docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 --no-cache -f $(Agent.BuildDirectory)/drop/Dockerfile-linux -t petabridge/lighthouse:latest -t petabridge/lighthouse:linux-latest -t petabridge/lighthouse:$(Build.SourceBranchName) -t petabridge/lighthouse:$(Build.SourceBranchName)-linux --push .
+      - script: docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 --no-cache -f $(Agent.BuildDirectory)/drop/Dockerfile-linux -t petabridge/lighthouse:latest -t petabridge/lighthouse:linux-latest -t petabridge/lighthouse:$(Build.SourceBranchName) -t petabridge/lighthouse:$(Build.SourceBranchName)-linux --push .
         displayName: Docker Build and Push (multiarch)
         continueOnError: true
       - task: Docker@2
