--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -71,6 +71,9 @@ jobs:
         inputs:
           sourceFolder: $(Agent.BuildDirectory)/drop
           targetFolder: $(Agent.BuildDirectory)
+      - bash: mv /Dockerfile-linux /Dockerfile
+        displayName: 'Rename Dockerfile-linux to Dockerfile'
+        failOnStderr: true
         # needed for ARM builds
       - script: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         displayName: Docker - Register QEMU
@@ -84,10 +87,9 @@ jobs:
       - script: docker buildx create --name akka-arch --use
         displayName: Create Docker buildx Builder
         continueOnError: true
-      - script: docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 --no-cache -f ./Dockerfile-linux -t petabridge/lighthouse:latest -t petabridge/lighthouse:linux-latest -t petabridge/lighthouse:$(Build.SourceBranchName) -t petabridge/lighthouse:$(Build.SourceBranchName)-linux --push .
+      - script: docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 --no-cache -t petabridge/lighthouse:latest -t petabridge/lighthouse:linux-latest -t petabridge/lighthouse:$(Build.SourceBranchName) -t petabridge/lighthouse:$(Build.SourceBranchName)-linux --push .
         displayName: Docker Build and Push (multiarch)
         continueOnError: true
-        workingDirectory: $(Agent.BuildDirectory)
       - task: Docker@2
         displayName: Logout of Docker Hub
         inputs:
