fix Docker push

--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -60,10 +60,6 @@ jobs:
       vmImage: ubuntu-latest
     dependsOn: publishNetCore
     steps:
-      - task: UseDotNet@2
-        displayName: 'Use .NET 6 SDK 6.0.100'
-        inputs:
-          version: 6.0.100
       - task: DownloadBuildArtifacts@0
         inputs:
           buildType: 'current'
@@ -75,29 +71,20 @@ jobs:
         inputs:
           sourceFolder: $(Agent.BuildDirectory)/drop
           targetFolder: $(Agent.BuildDirectory)
-      - script: |
-          mv Dockerfile-linux Dockerfile
-        displayName: 'Rename Dockerfile-linux to Dockerfile'
-        workingDirectory: $(Agent.BuildDirectory)
-        failOnStderr: true
         # needed for ARM builds
-      - script: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-        displayName: Docker - Register QEMU
-        condition: in( variables['Agent.OS'], 'Linux', 'Darwin' )
       - task: Docker@2
         displayName: "Login to Docker Hub"
         inputs:
           command: login
           containerRegistry: $(dockerConnectionName)
-      - script: docker buildx create --name akka-arch --use
-        displayName: Create Docker buildx Builder
-      - script: dotnet --info
-        displayName: debug .net
+      - script: docker build -no-cache -f Dockerfile-linux -t petabridge/lighthouse:latest -t petabridge/lighthouse:linux-latest -t petabridge/lighthouse:$(Build.SourceBranchName) -t petabridge/lighthouse:$(Build.SourceBranchName)-linux .
+        displayName: Docker Build (AMD64)
         workingDirectory: $(Agent.BuildDirectory)
-      - script: docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 --no-cache -t petabridge/lighthouse:latest -t petabridge/lighthouse:linux-latest -t petabridge/lighthouse:$(Build.SourceBranchName) -t petabridge/lighthouse:$(Build.SourceBranchName)-linux --push .
-        displayName: Docker Build and Push (multiarch)
+      - script: docker buildx build --platform linux/arm64 -f Dockerfile-arm64 --no-cache -t petabridge/lighthouse:arm64-latest -t petabridge/lighthouse:$(Build.SourceBranchName)-arm64 .
+        displayName: Docker Build (ARM64)
         workingDirectory: $(Agent.BuildDirectory)
-        continueOnError: true
+      - script: docker push -a petabridge/lighthouse
+        displayName: Docker Push
       - task: Docker@2
         displayName: Logout of Docker Hub
         inputs:
