--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -80,6 +80,8 @@ jobs:
       - script: docker build --no-cache -f Dockerfile-linux -t petabridge/lighthouse:latest -t petabridge/lighthouse:linux-latest -t petabridge/lighthouse:$(Build.SourceBranchName) -t petabridge/lighthouse:$(Build.SourceBranchName)-linux .
         displayName: Docker Build (AMD64)
         workingDirectory: $(Agent.BuildDirectory)
+      - script: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+        displayName: Docker - Register QEMU
       - script: docker buildx build --platform linux/arm64 -f Dockerfile-arm64 --no-cache -t petabridge/lighthouse:arm64-latest -t petabridge/lighthouse:$(Build.SourceBranchName)-arm64 .
         displayName: Docker Build (ARM64)
         workingDirectory: $(Agent.BuildDirectory)
