--- a/src/Lighthouse/Lighthouse.csproj
+++ b/src/Lighthouse/Lighthouse.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Petabridge.Cmd.Cluster"/>
     <PackageReference Include="Petabridge.Cmd.Remote"/>
     <PackageReference Include="Akka.Bootstrap.Docker"/>
-    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Serilog"/>
     <PackageReference Include="Serilog.Settings.Configuration"/>
     <PackageReference Include="Serilog.Sinks.Console"/>
   </ItemGroup>
