update build scripts to target .NET 7.0

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,8 +7,8 @@
     <PackageVersion Include="Akka.Cluster.Hosting" Version="1.5.0" />
     <PackageVersion Include="Akka.Logger.Serilog" Version="1.5.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Xml" Version="7.0.0" />
-    <PackageVersion Include="Petabridge.Cmd.Cluster" Version="1.3.0" />
-    <PackageVersion Include="Petabridge.Cmd.Remote" Version="1.3.0" />
+    <PackageVersion Include="Petabridge.Cmd.Cluster" Version="$(PbmVersion)" />
+    <PackageVersion Include="Petabridge.Cmd.Remote" Version="$(PbmVersion)" />
     <PackageVersion Include="Akka.Bootstrap.Docker" Version="0.5.3"/>
   </ItemGroup>
 
@@ -26,6 +26,6 @@
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
     <PackageVersion Include="FluentAssertions" Version="6.9.0" />
     <PackageVersion Include="coverlet.collector" Version="3.2.0" />
-    <PackageVersion Include="Akka.TestKit.XUnit2" Version="1.5.0" />
+    <PackageVersion Include="Akka.TestKit.XUnit2" Version="$(AkkaVersion)" />
   </ItemGroup>
 </Project>
