Enabled `TieredPGO` and `ServerGarbageCollection`
Goal is reduce latency and make Lighthouse more reliable, at the cost of slightly more CPU consumption.

--- a/src/Lighthouse/Lighthouse.csproj
+++ b/src/Lighthouse/Lighthouse.csproj
@@ -14,6 +14,11 @@
     <PackageReference Include="Serilog.Settings.Configuration"/>
     <PackageReference Include="Serilog.Sinks.Console"/>
   </ItemGroup>
+   
+  <PropertyGroup>
+    <ServerGarbageCollection>true</ServerGarbageCollection>
+    <TieredPGO>true</TieredPGO>
+  </PropertyGroup>
 
   <ItemGroup>
     <None Update="akka.hocon">
